<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_picker"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/textViewCamera"
        android:text="@string/camera"
        android:drawablePadding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:drawableStartCompat="@android:drawable/ic_menu_camera" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/gallery"
        android:id="@+id/textViewGallery"
        android:drawablePadding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:drawableStartCompat="@android:drawable/ic_menu_gallery" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.2"/>

</LinearLayout>